增加了伪距单点定位
测试过伪距单点定位GPS/GAL/QZSS/BDS可用，缺少电离层延迟改正，可能会出现不收敛的情况。正常情况下用GPS+GAL就可以。

--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -552,15 +552,16 @@
             android:orientation="vertical"
             android:layout_marginStart="5dp"
             >
+
             <Button
-                android:id="@+id/record_btnUpload"
+                android:id="@+id/record_btnSpp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_shape"
                 android:fontFamily="@font/thaisansneue_light"
                 android:gravity="center"
                 android:padding="3dp"
-                android:text="@string/uploadposition"
+                android:text="@string/spp"
                 android:textColor="@color/colorDarkGray"
                 android:textSize="16sp" />
 
